server/compilers/goLiteJS/src/test/ml1/valid/loop1.go
// loop support
package main

func main() {
    for {

    }

    for x < exp {

    }

    for i := exp0; i < exp1; exp2++ {

    }
}
