server/compilers/goLiteJS/src/test/ml1/invalid/break2.go
// break outside loop
package main

func main(){
    if true {break}
}
